Add 'indexes' api endpoints
